# mnn_yolov8_mr813

./: CMakeLists.txt  README.md  mr813_glibc.cmake
